--- a/package.json
+++ b/package.json
@@ -1,14 +1,35 @@
 {
-  "name": "electron-quick",
-  "version": "1.0.0",
-  "description": "Using Electron quick start guide",
+  "name": "electron-timeclock",
+  "version": "0.1.0",
+  "description": "",
   "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron .",
+    "watch": "./node_modules/.bin/webpack-dev-server",
+    "electron-rebuild": "./node_modules/.bin/electron-rebuild"
+  },
+  "devDependencies": {
+    "babel": "^5.6.10",
+    "babel-core": "^5.6.11",
+    "babel-loader": "^5.2.2",
+    "css-loader": "^0.15.1",
+    "electron-packager": "^4.1.3",
+    "electron-rebuild": "^0.2.2",
+    "eslint": "^2.6.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "node-libs-browser": "^0.5.2",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.12",
+    "webpack-dev-server": "^1.9.0"
+  },
   "dependencies": {
-    "dotenv": "^2.0.0"
+    "electron-prebuilt": "^0.28.3",
+    "dotenv": "^2.0.0",
+    "react": "^0.14.8"
   }
 }
