--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "description": "",
   "main": "main.js",
   "author": "",
-  "license": "ISC",
-  "scripts": {
-    "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron .",
-    "watch": "./node_modules/.bin/webpack-dev-server",
-    "electron-rebuild": "./node_modules/.bin/electron-rebuild"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "babel": "^5.6.10",
-    "babel-core": "^5.6.11",
-    "babel-loader": "^5.2.2",
-    "css-loader": "^0.15.1",
-    "electron-packager": "^4.1.3",
-    "electron-rebuild": "^0.2.2",
-    "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.2.3",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.0",
-    "node-libs-browser": "^0.5.2",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.9.12",
-    "webpack-dev-server": "^1.9.0"
+    "babel": "5.8.23",
+    "babelify": "6.4.0",
+    "browser-sync": "2.9.11",
+    "browserify": "11.2.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-plugin-react": "^3.16.1",
+    "firebase": "2.3.1",
+    "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-notify": "2.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-stylus": "2.1.0",
+    "gulp-uglify": "1.4.2",
+    "gulp-util": "3.0.7",
+    "install": "0.1.8",
+    "react": "0.14.0",
+    "react-catalyst": "0.3.0",
+    "react-dom": "0.14.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.4.0",
   },
   "dependencies": {
-    "electron-prebuilt": "^0.28.3",
     "dotenv": "^2.0.0",
     "react": "^0.14.8"
   }
